// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render ProfileButton, matches snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ThemeProvider
    theme={
        Object {
            "color": Object {
              "background": [Function],
              "brand": [Function],
              "foreground": [Function],
              "highlight": [Function],
            },
            "effects": Object {
              "borderRadius": Object {
                "med": 0.5,
                "small": [Function],
              },
            },
            "elements": Object {
              "thickBorder": [Function],
            },
            "layer": Object {
              "card": 30,
              "nav": 20,
              "overlay": 40,
              "tuck": -1,
              "up": 10,
            },
            "opacity": Object {
              "half": 0.5,
              "least": 0.125,
              "most": 0.85,
            },
            "size": Object {
              "block": Object {
                "border": 8,
                "column": Object {
                  "l": 820,
                  "m": 750,
                },
                "padding": 1.5,
                "spacing": 1,
              },
              "breakpoint": Object {
                "exact": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "max": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "min": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "stops": Object {
                  "max": 1600,
                  "min": 320,
                },
              },
              "font": Object {
                "auto": Array [
                  "
                ",
                  "
        		@media (min-width: ",
                  "32.5625",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (max-width: ",
                  "32.5",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (max-width: ",
                  "20",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (min-width: ",
                  "100.0625",
                  "em) {
        			",
                  "font-size:	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  ";
              ",
                ],
                "l": 23,
                "m": 20,
                "make": Object {
                  "larger": 3,
                  "normal": 1,
                  "smaller": 0.85,
                  "tiny": 0.65,
                },
                "s": 18,
                "xs": 17,
              },
            },
            "typography": Object {
              "text": Object {
                "auto": Array [
                  "
                  color: ",
                  [Function],
                  ";
                  font-family: ",
                  "'Lora', Georgia, serif",
                  ";
                  letter-spacing: 0.025em;
                  line-height: ",
                  [Function],
                  "em;
                ",
                ],
                "font": "'Lora', Georgia, serif",
                "lineHeight": 1.75,
              },
              "title": Object {
                "auto": Array [
                  "
                  color: ",
                  [Function],
                  ";
                  font-family: ",
                  "'Exo 2', Arial, sans-serif",
                  ";
                  letter-spacing: 0.025em;
                  line-height: ",
                  [Function],
                  "em;
                  font-weight: ",
                  "600",
                  ";
                  margin: 0;
                ",
                ],
                "font": "'Exo 2', Arial, sans-serif",
                "lineHeight": 1.15,
              },
            },
          }
    }
>
    <styled.input />
</ThemeProvider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): Object {
    "__styled-components__": [Function],
    "__styled-components__next__": Object {
      "getTheme": [Function],
      "subscribe": [Function],
      "unsubscribe": [Function],
    },
  },
}
`;

exports[`Render ProfileCaption, matches snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ThemeProvider
    theme={
        Object {
            "color": Object {
              "background": [Function],
              "brand": [Function],
              "foreground": [Function],
              "highlight": [Function],
            },
            "effects": Object {
              "borderRadius": Object {
                "med": 0.5,
                "small": [Function],
              },
            },
            "elements": Object {
              "thickBorder": [Function],
            },
            "layer": Object {
              "card": 30,
              "nav": 20,
              "overlay": 40,
              "tuck": -1,
              "up": 10,
            },
            "opacity": Object {
              "half": 0.5,
              "least": 0.125,
              "most": 0.85,
            },
            "size": Object {
              "block": Object {
                "border": 8,
                "column": Object {
                  "l": 820,
                  "m": 750,
                },
                "padding": 1.5,
                "spacing": 1,
              },
              "breakpoint": Object {
                "exact": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "max": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "min": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "stops": Object {
                  "max": 1600,
                  "min": 320,
                },
              },
              "font": Object {
                "auto": Array [
                  "
                ",
                  "
        		@media (min-width: ",
                  "32.5625",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (max-width: ",
                  "32.5",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (max-width: ",
                  "20",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (min-width: ",
                  "100.0625",
                  "em) {
        			",
                  "font-size:	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  ";
              ",
                ],
                "l": 23,
                "m": 20,
                "make": Object {
                  "larger": 3,
                  "normal": 1,
                  "smaller": 0.85,
                  "tiny": 0.65,
                },
                "s": 18,
                "xs": 17,
              },
            },
            "typography": Object {
              "text": Object {
                "auto": Array [
                  "
                  color: ",
                  [Function],
                  ";
                  font-family: ",
                  "'Lora', Georgia, serif",
                  ";
                  letter-spacing: 0.025em;
                  line-height: ",
                  [Function],
                  "em;
                ",
                ],
                "font": "'Lora', Georgia, serif",
                "lineHeight": 1.75,
              },
              "title": Object {
                "auto": Array [
                  "
                  color: ",
                  [Function],
                  ";
                  font-family: ",
                  "'Exo 2', Arial, sans-serif",
                  ";
                  letter-spacing: 0.025em;
                  line-height: ",
                  [Function],
                  "em;
                  font-weight: ",
                  "600",
                  ";
                  margin: 0;
                ",
                ],
                "font": "'Exo 2', Arial, sans-serif",
                "lineHeight": 1.15,
              },
            },
          }
    }
>
    <Styled(Styled(Component)) />
</ThemeProvider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): Object {
    "__styled-components__": [Function],
    "__styled-components__next__": Object {
      "getTheme": [Function],
      "subscribe": [Function],
      "unsubscribe": [Function],
    },
  },
}
`;

exports[`Render ProfileCard, matches snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Styled(Styled(styled.div))>
          <figure>
                    <styled.div
                              frothId={undefined}
                    >
                              <img
                                        alt="Profile avatar"
                                        onClick={[Function]}
                                        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                        style={
                                                  Object {
                                                            "cursor": "pointer",
                                                          }
                                        }
                              />
                    </styled.div>
          </figure>
</Styled(Styled(styled.div))>,
        <Styled(Styled(styled.div))>
          <figcaption>
                    <Styled(Styled(Component))
                              maxLength={250}
                              onChange={[Function]}
                              placeholder="Please introduce yourself in 30 words or less."
                              value=""
                              warning={undefined}
                    />
          </figcaption>
          <styled.input
                    maxLength={250}
                    onBlur={undefined}
                    onChange={[Function]}
                    onFocus={undefined}
                    placeholder="Add Your Link Here"
                    value=""
          />
</Styled(Styled(styled.div))>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <figure>
            <styled.div
                        frothId={undefined}
            >
                        <img
                                    alt="Profile avatar"
                                    onClick={[Function]}
                                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                    style={
                                                Object {
                                                            "cursor": "pointer",
                                                          }
                                    }
                        />
            </styled.div>
</figure>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <styled.div
              frothId={undefined}
>
              <img
                            alt="Profile avatar"
                            onClick={[Function]}
                            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                            style={
                                          Object {
                                                        "cursor": "pointer",
                                                      }
                            }
              />
</styled.div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <img
                alt="Profile avatar"
                onClick={[Function]}
                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                style={
                                Object {
                                                "cursor": "pointer",
                                              }
                }
/>,
              "frothId": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "Profile avatar",
                "onClick": [Function],
                "src": "data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7",
                "style": Object {
                  "cursor": "pointer",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": [Function],
          },
          "type": "figure",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <figcaption>
              <Styled(Styled(Component))
                            maxLength={250}
                            onChange={[Function]}
                            placeholder="Please introduce yourself in 30 words or less."
                            value=""
                            warning={undefined}
              />
</figcaption>,
            <styled.input
              maxLength={250}
              onBlur={undefined}
              onChange={[Function]}
              onFocus={undefined}
              placeholder="Add Your Link Here"
              value=""
/>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Styled(Styled(Component))
                maxLength={250}
                onChange={[Function]}
                placeholder="Please introduce yourself in 30 words or less."
                value=""
                warning={undefined}
/>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "maxLength": 250,
                "onChange": [Function],
                "placeholder": "Please introduce yourself in 30 words or less.",
                "value": "",
                "warning": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "figcaption",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "maxLength": 250,
              "onBlur": undefined,
              "onChange": [Function],
              "onFocus": undefined,
              "placeholder": "Add Your Link Here",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Styled(Styled(styled.div))>
            <figure>
                        <styled.div
                                    frothId={undefined}
                        >
                                    <img
                                                alt="Profile avatar"
                                                onClick={[Function]}
                                                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                                style={
                                                            Object {
                                                                        "cursor": "pointer",
                                                                      }
                                                }
                                    />
                        </styled.div>
            </figure>
</Styled(Styled(styled.div))>,
          <Styled(Styled(styled.div))>
            <figcaption>
                        <Styled(Styled(Component))
                                    maxLength={250}
                                    onChange={[Function]}
                                    placeholder="Please introduce yourself in 30 words or less."
                                    value=""
                                    warning={undefined}
                        />
            </figcaption>
            <styled.input
                        maxLength={250}
                        onBlur={undefined}
                        onChange={[Function]}
                        onFocus={undefined}
                        placeholder="Add Your Link Here"
                        value=""
            />
</Styled(Styled(styled.div))>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <figure>
              <styled.div
                            frothId={undefined}
              >
                            <img
                                          alt="Profile avatar"
                                          onClick={[Function]}
                                          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                          style={
                                                        Object {
                                                                      "cursor": "pointer",
                                                                    }
                                          }
                            />
              </styled.div>
</figure>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <styled.div
                frothId={undefined}
>
                <img
                                alt="Profile avatar"
                                onClick={[Function]}
                                src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                style={
                                                Object {
                                                                "cursor": "pointer",
                                                              }
                                }
                />
</styled.div>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <img
                  alt="Profile avatar"
                  onClick={[Function]}
                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                  style={
                                    Object {
                                                      "cursor": "pointer",
                                                    }
                  }
/>,
                "frothId": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "Profile avatar",
                  "onClick": [Function],
                  "src": "data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7",
                  "style": Object {
                    "cursor": "pointer",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              "type": [Function],
            },
            "type": "figure",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <figcaption>
                <Styled(Styled(Component))
                                maxLength={250}
                                onChange={[Function]}
                                placeholder="Please introduce yourself in 30 words or less."
                                value=""
                                warning={undefined}
                />
</figcaption>,
              <styled.input
                maxLength={250}
                onBlur={undefined}
                onChange={[Function]}
                onFocus={undefined}
                placeholder="Add Your Link Here"
                value=""
/>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Styled(Styled(Component))
                  maxLength={250}
                  onChange={[Function]}
                  placeholder="Please introduce yourself in 30 words or less."
                  value=""
                  warning={undefined}
/>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "maxLength": 250,
                  "onChange": [Function],
                  "placeholder": "Please introduce yourself in 30 words or less.",
                  "value": "",
                  "warning": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "figcaption",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "maxLength": 250,
                "onBlur": undefined,
                "onChange": [Function],
                "onFocus": undefined,
                "placeholder": "Add Your Link Here",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Render ProfileHeader, matches snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ThemeProvider
    theme={
        Object {
            "color": Object {
              "background": [Function],
              "brand": [Function],
              "foreground": [Function],
              "highlight": [Function],
            },
            "effects": Object {
              "borderRadius": Object {
                "med": 0.5,
                "small": [Function],
              },
            },
            "elements": Object {
              "thickBorder": [Function],
            },
            "layer": Object {
              "card": 30,
              "nav": 20,
              "overlay": 40,
              "tuck": -1,
              "up": 10,
            },
            "opacity": Object {
              "half": 0.5,
              "least": 0.125,
              "most": 0.85,
            },
            "size": Object {
              "block": Object {
                "border": 8,
                "column": Object {
                  "l": 820,
                  "m": 750,
                },
                "padding": 1.5,
                "spacing": 1,
              },
              "breakpoint": Object {
                "exact": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "max": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "min": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "stops": Object {
                  "max": 1600,
                  "min": 320,
                },
              },
              "font": Object {
                "auto": Array [
                  "
                ",
                  "
        		@media (min-width: ",
                  "32.5625",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (max-width: ",
                  "32.5",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (max-width: ",
                  "20",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (min-width: ",
                  "100.0625",
                  "em) {
        			",
                  "font-size:	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  ";
              ",
                ],
                "l": 23,
                "m": 20,
                "make": Object {
                  "larger": 3,
                  "normal": 1,
                  "smaller": 0.85,
                  "tiny": 0.65,
                },
                "s": 18,
                "xs": 17,
              },
            },
            "typography": Object {
              "text": Object {
                "auto": Array [
                  "
                  color: ",
                  [Function],
                  ";
                  font-family: ",
                  "'Lora', Georgia, serif",
                  ";
                  letter-spacing: 0.025em;
                  line-height: ",
                  [Function],
                  "em;
                ",
                ],
                "font": "'Lora', Georgia, serif",
                "lineHeight": 1.75,
              },
              "title": Object {
                "auto": Array [
                  "
                  color: ",
                  [Function],
                  ";
                  font-family: ",
                  "'Exo 2', Arial, sans-serif",
                  ";
                  letter-spacing: 0.025em;
                  line-height: ",
                  [Function],
                  "em;
                  font-weight: ",
                  "600",
                  ";
                  margin: 0;
                ",
                ],
                "font": "'Exo 2', Arial, sans-serif",
                "lineHeight": 1.15,
              },
            },
          }
    }
>
    <Styled(styled.header) />
</ThemeProvider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): Object {
    "__styled-components__": [Function],
    "__styled-components__next__": Object {
      "getTheme": [Function],
      "subscribe": [Function],
      "unsubscribe": [Function],
    },
  },
}
`;
